# arxiv_mcp

./: README.md  paper_interpreter.py  plugin_utils.py  pyproject.toml  server.py
tests/: test_offline.py  test_paper_interpreter.py  test_server.py
